--- a/src/EChat.Frontend/src/app/modules/authentication/components/auth-view/auth-view.component.html
+++ b/src/EChat.Frontend/src/app/modules/authentication/components/auth-view/auth-view.component.html
@@ -6,10 +6,10 @@
 
             <div class="flex gap-2">
                 <input type="text" id="name"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-sm focus:ring-blue-500 focus:border-blue-500 block w-full p-2 dark:bg-gray-700"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg shadow-lg block w-full p-2 dark:bg-gray-700"
                     placeholder="Enter Name" required maxlength="100" [formControl]="nameInput" />
                 <button type="submit" form="registrationForm"
-                    class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-sm text-sm w-full sm:w-auto px-5 py-2 text-center">Join</button>
+                    class="text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none font-medium rounded-lg shadow-lg text-sm w-full sm:w-auto px-5 py-2 text-center">Join</button>
             </div>
 
             <div class="text-sm text-red-600" *ngIf="validateInputField(nameInput).hasError">
