Added base chat logic

--- a/src/EChat.Frontend/src/app/modules/chat/components/chat-view/chat-view.component.html
+++ b/src/EChat.Frontend/src/app/modules/chat/components/chat-view/chat-view.component.html
@@ -16,7 +16,7 @@
                             <div [ngClass]="{'sent-message': message.isSent, 'received-message': !message.isSent}">
                                 <div class="flex flex-col">
                                     <span class="user-name">
-                                        {{message.userNname}}
+                                        {{message.userName}}
                                     </span>
                                     <span>
                                         {{message.text}}
