Added db message saving

--- a/src/EChat.Frontend/src/app/modules/chat/components/chat-view/chat-view.component.scss
+++ b/src/EChat.Frontend/src/app/modules/chat/components/chat-view/chat-view.component.scss
@@ -49,7 +49,7 @@
 
 .received-message {
     @include message();
-    background-color: #efeded;
+    background-color: #f8e4be;
     border-radius: 10px 10px 10px 0;
     align-self: flex-start;
 }
